Replace --ntp color variables with --ds equivalents

--- a/special-pages/pages/new-tab/app/activity/components/ActivityLegacy.module.css
+++ b/special-pages/pages/new-tab/app/activity/components/ActivityLegacy.module.css
@@ -100,7 +100,7 @@
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
     text-decoration: none;
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-text-primary);
     height: 35px;
     display: flex;
     align-items: center;
@@ -111,7 +111,7 @@
     min-width: 0;
 
     &:hover, &:focus-visible {
-        color: var(--ntp-color-primary);
+        color: var(--ds-color-accent-primary);
         .favicon {
             transform: scale(1.08)
         }
@@ -135,7 +135,7 @@
     background: transparent;
     padding: 0;
     margin: 0;
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-text-primary);
     svg {
         position: absolute;
         top: 50%;
@@ -224,7 +224,7 @@
     font-size: var(--small-label-font-size);
     font-weight: var(--small-label-font-weight);
     line-height: var(--small-label-line-height);
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-text-primary);
     text-decoration: none;
     min-width: 0;
     white-space: nowrap;
@@ -232,7 +232,7 @@
     text-overflow: ellipsis;
 
     &:hover, &:focus-visible {
-        color: var(--ntp-color-primary)
+        color: var(--ds-color-accent-primary)
     }
 
     &:hover .time {
@@ -244,7 +244,7 @@
 .time {
     flex-shrink: 0;
     margin-left: 8px;
-    color: var(--ntp-text-muted);
+    color: var(--ds-color-text-secondary);
     opacity: 0.6;
     font-size: var(--small-label-font-size);
     font-weight: var(--small-label-font-weight);
