--- a/special-pages/pages/new-tab/app/components/Components.module.css
+++ b/special-pages/pages/new-tab/app/components/Components.module.css
@@ -5,14 +5,14 @@ body[data-display="components"] {
     padding-right: 0;
 
     a {
-        color: var(--ntp-text-normal);
+        color: var(--ds-color-text-primary);
     }
 }
 
 .main {
     height: 100vh;
     overflow: auto;
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-text-primary);
 }
 
 
@@ -65,7 +65,7 @@ body:has(.tubeGrid):has([data-isolated=true]) {
 }
 
 .itemLink {
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-text-primary);
     padding: 0.2em 0.3em;
     border: 1px solid var(--color-gray-60);
     border-radius: var(--border-radius-xs);
