NTP: Use design system colors (#2095)
* Use mock customizer data in Components

* Add theme variant CSS vars, fix background colors

* Migrate ntp- to ds- color variables

* Replace --ntp color variables with --ds equivalents

* Update design-tokens to v0.2.0

* Remove duplicate focus ring definition

* Remove --ntp-widget-expander-bg var

* Fix Toggle Duck.ai icon color

* Update background color assertions to surface-canvas

--- a/special-pages/pages/new-tab/app/customizer/components/VisibilityMenu.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/VisibilityMenu.module.css
@@ -21,7 +21,7 @@
     height: calc(28 * var(--px-in-rem));
 
     &:has(input[disabled]) .title {
-        color: var(--ntp-text-tertiary)
+        color: var(--ds-color-theme-text-tertiary)
     }
 }
 
