--- a/special-pages/pages/new-tab/app/components/App.module.css
+++ b/special-pages/pages/new-tab/app/components/App.module.css
@@ -55,7 +55,7 @@ body[data-animate-background="true"] {
     height: 100vh;
     overflow: auto;
     grid-area: main;
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-theme-text-primary);
 }
 
 /* WebKit-only fix for layout shift when scrollbar appears */
@@ -66,7 +66,7 @@ body[data-animate-background="true"] {
 }
 
 .themeContext {
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-theme-text-primary);
 }
 
 .mainLayout {
@@ -98,8 +98,8 @@ body[data-animate-background="true"] {
 }
 
 .aside {
-    color: var(--ntp-text-normal);
-    background: var(--ntp-surfaces-panel-background-color);
+    color: var(--ds-color-theme-text-primary);
+    background: var(--ds-color-theme-surface-tertiary);
     grid-area: aside;
     height: 100vh;
     z-index: 1;
@@ -153,7 +153,7 @@ body[data-animate-background="true"] {
 
     &::-webkit-scrollbar-thumb {
         background: rgb(108, 108, 108);
-        border: 4px solid var(--ntp-surfaces-panel-background-color);
+        border: 4px solid var(--ds-color-theme-surface-tertiary);
         border-radius: 6px;
     }
 }
