--- a/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
@@ -32,7 +32,7 @@
 }
 
 .preview {
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-theme-text-primary);
     transform: scale(0.8);
     img {
         opacity: 0.8;
