--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -9,7 +9,7 @@
 .input {
     background: none;
     border: none;
-    color: var(--ntp-text-primary);
+    color: var(--ds-color-theme-text-primary);
     font: var(--input-font);
     left: 0;
     padding: var(--sp-3);
@@ -18,7 +18,7 @@
     right: 0;
 
     &::placeholder {
-        color: var(--ntp-text-tertiary);
+        color: var(--ds-color-theme-text-tertiary);
     }
 
     [data-platform='windows'] &::selection {
@@ -39,7 +39,7 @@
 }
 
 .suffix {
-    color: var(--ntp-accent-primary);
+    color: var(--ds-color-theme-accent-primary);
     flex: none;
     font: var(--input-font);
 }
@@ -49,7 +49,7 @@
     background: none;
     border-radius: 9px;
     border: none;
-    color: var(--ntp-text-primary);
+    color: var(--ds-color-theme-text-primary);
     cursor: pointer;
     display: flex;
     flex: none;
@@ -63,11 +63,11 @@
     visibility: hidden;
 
     &:hover {
-        background: var(--ntp-controls-fill-primary);
+        background: var(--ds-color-theme-control-fill-primary);
     }
 
     &:active {
-        background: var(--ntp-controls-fill-secondary);
+        background: var(--ds-color-theme-control-fill-secondary);
     }
 
     &:focus-visible {
