--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -47,7 +47,7 @@
     flex: 1;
 
     & [aria-controls] {
-        background-color: var(--ntp-widget-expander-bg);
+        background-color: var(--ds-color-theme-control-fill-primary);
         width: 24px;
         height: 24px;
         position: absolute;
@@ -75,7 +75,7 @@
     width: 196px;
     padding-right: 18px;
     box-sizing: content-box;
-    
+
     &:last-child {
         padding-right: 0;
     }
@@ -86,14 +86,14 @@
 }
 
 .title {
-    color: var(--ntp-text-primary);
+    color: var(--ds-color-theme-text-primary);
     font-size: 40px;
     font-weight: 400;
     grid-area: title;
     line-height: 28px;
 
   & span {
-    color: var(--ntp-text-muted);
+    color: var(--ds-color-theme-text-secondary);
     display: block;
     font-size: var(--title-3-em-font-size);
     line-height: 20px;
@@ -105,7 +105,7 @@
 }
 
 .noRecentTitle {
-    color: var(--ntp-text-muted);
+    color: var(--ds-color-theme-text-secondary);
     grid-area: title;
     font-size: var(--title-3-em-font-size);
     font-weight: 400;
@@ -114,7 +114,7 @@
 
 .subtitle {
     grid-area: label;
-    color: var(--ntp-text-muted);
+    color: var(--ds-color-theme-text-secondary);
     line-height: var(--body-line-height);
     text-transform: uppercase;
 
@@ -162,7 +162,7 @@
 
 .otherTrackersRow {
     padding-left: var(--sp-1);
-    color: var(--ntp-text-muted);
+    color: var(--ds-color-theme-text-secondary);
     display: flex;
     align-items: center;
 
@@ -192,7 +192,7 @@
 .count {
     grid-area: count;
     text-align: right;
-    color: var(--ntp-text-normal);
+    color: var(--ds-color-theme-text-primary);
     line-height: 1;
 }
 
