--- a/special-pages/pages/history/app/components/Header.module.css
+++ b/special-pages/pages/history/app/components/Header.module.css
@@ -3,9 +3,9 @@
     justify-content: space-between;
     align-items: center;
     gap: 8px;
-    color: var(--history-text-normal);
+    color: var(--ds-color-theme-text-primary);
     padding: 16px 0;
-    border-bottom: 1px solid var(--history-surface-border-color);
+    border-bottom: 1px solid var(--ds-color-theme-surface-decoration-primary);
 }
 
 .controls {
@@ -22,7 +22,7 @@
     height: 28px;
     border: none;
     border-radius: 4px;
-    color: var(--history-text-normal);
+    color: var(--ds-color-theme-text-primary);
     padding-left: 8px;
     padding-right: 8px;
 
@@ -81,7 +81,7 @@
     width: 100%;
     height: 28px;
     border-radius: 6px;
-    border: 0.5px solid var(--history-surface-border-color);
+    border: 0.5px solid var(--ds-color-theme-container-border-secondary);
     /* these precise numbers help it match figma when overriding default UI */
     padding-left: 31px;
     padding-right: 9px;
@@ -90,7 +90,6 @@
 
     [data-theme="dark"] & {
         background: var(--color-white-at-6);
-        border-color: var(--color-white-at-9);
     }
 
     &:focus {
