--- a/special-pages/pages/history/app/components/VirtualizedList.module.css
+++ b/special-pages/pages/history/app/components/VirtualizedList.module.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    color: var(--history-text-normal);
+    color: var(--ds-color-theme-text-primary);
     display: grid;
     grid-template-rows: max-content max-content;
     justify-items: center;
@@ -45,5 +45,5 @@
 }
 .emptyText {
     margin-top: 8px;
-    color: var(--history-text-muted)
+    color: var(--ds-color-theme-text-secondary)
 }
