--- a/special-pages/pages/history/app/components/Header.module.css
+++ b/special-pages/pages/history/app/components/Header.module.css
@@ -32,17 +32,11 @@
     }
 
     &:hover {
-        background-color: var(--color-black-at-6);
-        [data-theme="dark"] & {
-            background-color: var(--color-white-at-6)
-        }
+        background-color: var(--ds-color-theme-control-fill-secondary);
     }
 
     &:active {
-        background-color: var(--color-black-at-12);
-        [data-theme="dark"] & {
-            background-color: var(--color-white-at-12)
-        }
+        background-color: var(--ds-color-theme-control-fill-tertiary);
     }
 
     &[aria-disabled="true"] {
@@ -72,29 +66,29 @@
     top: 50%;
     left: 9px;
     transform: translateY(-50%);
-    color: black;
-    [data-theme="dark"] & {
-        color: white;
-    }
+    color: var(--ds-color-theme-icon-primary);
 }
 .searchInput {
     width: 100%;
     height: 28px;
     border-radius: 6px;
-    border: 0.5px solid var(--ds-color-theme-container-border-secondary);
+    border: 0.5px solid var(--ds-color-theme-control-border-primary);
     /* these precise numbers help it match figma when overriding default UI */
     padding-left: 31px;
     padding-right: 9px;
     background: inherit;
     color: inherit;
+    background: var(--ds-color-theme-surface-tertiary);
 
-    [data-theme="dark"] & {
-        background: var(--color-white-at-6);
+    &:hover {
+        border-color: var(--ds-color-theme-control-border-secondary);
     }
 
     &:focus {
         outline: none;
-        box-shadow: 0px 0px 0px 2.5px rgba(87, 151, 237, 0.64), 0px 0px 0px 1px rgba(87, 151, 237, 0.64) inset, 0px 0.5px 0px -0.5px rgba(0, 0, 0, 0.10), 0px 1px 0px -0.5px rgba(0, 0, 0, 0.10);
+        border: 2px solid var(--ds-color-theme-accent-primary);
+        padding-left: 29.5px;
+        padding-right: 7.5px;
     }
 
     &::-webkit-search-cancel-button {
