--- a/special-pages/pages/history/app/components/Item.module.css
+++ b/special-pages/pages/history/app/components/Item.module.css
@@ -33,7 +33,7 @@
     --row-bg: inherit;
     --row-radius: 5px;
     --row-color: var(--ds-color-theme-text-primary);
-    --dots-bg-hover: var(--color-black-at-9);
+    --dots-bg-hover: var(--ds-color-theme-control-fill-primary);
     --dots-opacity: 0;
     --time-opacity: 0.6;
     --time-visibility: visible;
@@ -49,20 +49,17 @@
     }
 
     &:hover:not([aria-selected="true"]) {
-        --row-bg: var(--color-black-at-6);
-        [data-theme="dark"] & {
-            --row-bg: var(--color-white-at-6);
-        }
+        --row-bg: var(--ds-color-theme-control-fill-primary);
     }
 
-    [data-theme="dark"] & {
-        --dots-bg-hover: var(--color-white-at-12);
+    &:active:not([aria-selected="true"]) {
+        --row-bg: var(--ds-color-theme-control-fill-secondary);
     }
 
     &[aria-selected="true"] {
-        --row-bg: #2565D9;
-        --row-color: var(--color-white-at-84);
-        --dots-bg-hover: var(--color-white-at-9);
+        --row-bg: var(--ds-color-theme-accent-primary);
+        --row-color: var(--ds-color-theme-accent-content-primary);
+        --dots-bg-hover: var(--ds-color-theme-accent-secondary);
     }
 }
 
