DRY NTP and history's theme mappings into shared theme-mappings.css

--- a/special-pages/pages/new-tab/app/components/App.module.css
+++ b/special-pages/pages/new-tab/app/components/App.module.css
@@ -1,4 +1,5 @@
 @import url("../../../../shared/styles/variables.css");
+@import url("../../../../shared/styles/theme-mappings.css");
 @import url("../styles/base.css");
 @import url("../styles/ntp-theme.css");
 
