--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -8,6 +8,9 @@
 
 /* macOS Base Style */
 [data-platform-name="macos"] .button {
+    /* Focus ring: 2px outline with 1px transparent offset */
+    --focus-ring-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-light-accent-primary));
+
     border: 0;
     border-radius: calc(5 * var(--px-in-rem));
     box-shadow: var(--button-shadow);
@@ -40,12 +43,12 @@
         }
     }
 
-    &:focus,
     &:focus-visible {
         background: var(--button-bg--focus, var(--button-bg));
-        box-shadow: var(--button-shadow--focus, var(--button-shadow));
         color: var(--button-text--focus, var(--button-text));
         opacity: var(--button-opacity--focus, var(--button-opacity));
+        outline: 2px solid var(--focus-ring-color);
+        outline-offset: 1px;
     }
 
     &:hover {
@@ -110,11 +113,8 @@ body:not([data-platform-name]) {
     }
 }
 
-/* macOs Design System Button Tokens */
+/* macOS Design System Button Tokens */
 [data-platform-name="macos"] {
-    /* Shared among all variants */
-    --macos-control-focused-shadow: 0 0 0 3px rgba(57, 105, 239, 0.55), 0 0 0 1px rgba(57, 105, 239, 0.55) inset, 0 0 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-
     /* Standard button variant */
     --macos-control-standard-background-rest: var(--color-white);
     --macos-control-standard-background-rest--dark: rgba(255, 255, 255, 0.28);
@@ -122,16 +122,24 @@ body:not([data-platform-name]) {
     --macos-control-standard-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.2) inset, 0 1px 0 0 rgba(255, 255, 255, 0.05) inset, 0 0 0 1px rgba(0, 0, 0, 0.1), 0 0 1px 0 rgba(0, 0, 0, 0.05), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
 
     /* Accent Branded variant */
-    --macos-control-accent-branded-background-rest: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2749DB;
-    --macos-control-accent-branded-background-pressed: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2140C0;
-    --macos-control-accent-branded-background-hover: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), #2749DB;
-    --macos-control-accent-branded-background-disabled: var(--color-white);
-    --macos-control-accent-branded-background-focus: linear-gradient(0deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.16) 100%), #2749DB;
+    --macos-accent-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-light-accent-primary));
+    --macos-accent-color-secondary: var(--ds-color-theme-accent-secondary, var(--ds-color-theme-default-light-accent-secondary));
+    --macos-accent-color-tertiary: var(--ds-color-theme-accent-tertiary, var(--ds-color-theme-default-light-accent-tertiary));
+    --macos-control-accent-branded-background-rest: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), var(--macos-accent-color);
+    --macos-control-accent-branded-background-hover: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), var(--macos-accent-color-secondary);
+    --macos-control-accent-branded-background-pressed: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), var(--macos-accent-color-tertiary);
+    --macos-control-accent-branded-background-focus: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.16) 100%), var(--macos-accent-color);
 
     --macos-control-accent-branded-shadow-rest: 0 1px 0 0 rgba(255, 255, 255, 0) inset, 0 1px 0 0 rgba(255, 255, 255, 0) inset, 0 0 0 1px rgba(0, 122, 255, 0.05), 0 0 1px 0 rgba(0, 122, 255, 0.05), 0 1px 1px 0 rgba(0, 122, 255, 0.1);
     --macos-control-accent-branded-shadow-pressed: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 0px 0px 0.5px rgba(0, 122, 255, 0.05), 0px 0px 1px 0px rgba(0, 122, 255, 0.05), 0px 1px 1px 0px rgba(0, 122, 255, 0.10);
     --macos-control-accent-branded-shadow-hover: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.00) inset, 0px 0px 0px 0.5px rgba(0, 122, 255, 0.05), 0px 0px 1px 0px rgba(0, 122, 255, 0.05), 0px 1px 1px 0px rgba(0, 122, 255, 0.10);
     --macos-control-accent-branded-shadow-disabled: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.20) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.05) inset, 0px 0px 0px 0.5px rgba(0, 0, 0, 0.10), 0px 0px 1px 0px rgba(0, 0, 0, 0.05), 0px 1px 1px 0px rgba(0, 0, 0, 0.20);
+
+    &[data-theme="dark"] {
+        --macos-accent-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-dark-accent-primary));
+        --macos-accent-color-secondary: var(--ds-color-theme-accent-secondary, var(--ds-color-theme-default-dark-accent-secondary));
+        --macos-accent-color-tertiary: var(--ds-color-theme-accent-tertiary, var(--ds-color-theme-default-dark-accent-tertiary));
+    }
 }
 
 /* macOS Variables */
@@ -151,9 +159,6 @@ body:not([data-platform-name]) {
         --button-shadow--disabled: var(--macos-control-standard-shadow);
         --button-opacity--disabled: 0.4;
 
-        /* Focus */
-        --button-shadow--focus: var(--macos-control-focused-shadow);
-
         /* Hover */
         /* TODO: No difference on hover according to Figma(?) */
     }
@@ -161,13 +166,12 @@ body:not([data-platform-name]) {
     &.accent,
     &.accentBrand {
         --button-bg: var(--macos-control-accent-branded-background-rest);
-        --button-text: var(--color-white);
+        --button-text: var(--ds-color-theme-accent-content-primary, var(--ds-color-theme-default-light-accent-content-primary));
         --button-shadow: var(--macos-control-accent-branded-shadow-rest);
         --button-opacity: 1;
 
         /* Active */
         --button-bg--active: var(--macos-control-accent-branded-background-pressed);
-        --button-text--active: var(--color-white-at-80);
         --button-shadow--active: var(--macos-control-accent-branded-shadow-pressed);
 
         /* Disabled */
@@ -178,22 +182,24 @@ body:not([data-platform-name]) {
 
         /* Focus */
         --button-bg--focus: var(--macos-control-accent-branded-background-focus);
-        --button-text--focus: var(--color-white);
-        --button-shadow--focus: var(--macos-control-focused-shadow);
 
         /* Hover */
         --button-bg--hover: var(--macos-control-accent-branded-background-hover);
-        --button-text--hover: var(--color-white);
         --button-shadow--hover: var(--macos-control-accent-branded-shadow-hover);
     }
 
     [data-theme=dark] & {
+        --focus-ring-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-dark-accent-primary));
+
         &.standard {
             --button-bg: var(--macos-control-standard-background-rest--dark);
             --button-text: var(--color-white-at-84);
         }
 
-        /** TODO: Confirm that colors don't change in Dark Mode for accented macOS button */
+        &.accent,
+        &.accentBrand {
+            --button-text: var(--ds-color-theme-accent-content-primary, var(--ds-color-theme-default-dark-accent-content-primary));
+        }
     }
 }
 
@@ -258,8 +264,8 @@ body:not([data-platform-name]) {
 /* Windows Implementation */
 [data-platform-name="windows"] {
     .button {
-        /* this is the focus ring used on NTP widgets */
-        --focus-ring: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--color-black);
+        /* Focus ring: 2px outline with 1px transparent offset */
+        --focus-ring-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-light-accent-primary));
 
         border-radius: var(--border-radius-sm);
         height: var(--sp-8);
@@ -268,88 +274,102 @@ body:not([data-platform-name]) {
         padding-right: var(--sp-3);
 
         &:focus-visible {
-            outline: none;
-            box-shadow: var(--focus-ring);
+            outline: 2px solid var(--focus-ring-color);
+            outline-offset: 1px;
         }
 
         &.standard {
-            background-color: var(--color-black-at-6);
+            background-color: var(--ds-color-theme-control-fill-primary, var(--ds-color-theme-default-light-control-fill-primary));
+            color: var(--ds-color-theme-text-primary, var(--ds-color-theme-default-light-text-primary));
             border-width: 0;
 
             &:hover {
-                background-color: var(--color-black-at-9);
+                background-color: var(--ds-color-theme-control-fill-secondary, var(--ds-color-theme-default-light-control-fill-secondary));
                 cursor: pointer;
             }
 
             &:active {
-                background-color: var(--color-black-at-12);
+                background-color: var(--ds-color-theme-control-fill-tertiary, var(--ds-color-theme-default-light-control-fill-tertiary));
             }
 
             &:disabled {
-                color: var(--color-black-at-84);
+                color: var(--ds-color-theme-text-primary, var(--ds-color-theme-default-light-text-primary));
+                opacity: 0.4;
             }
 
             &:disabled:hover {
                 cursor: not-allowed;
-                background-color: var(--color-white-at-6);
+                background-color: var(--ds-color-theme-control-fill-primary, var(--ds-color-theme-default-light-control-fill-primary));
             }
         }
 
         &.accent,
         &.accentBrand {
-            background-color: var(--ddg-color-primary);
-            color: var(--color-white);
+            background-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-light-accent-primary));
+            color: var(--ds-color-theme-accent-content-primary, var(--ds-color-theme-default-light-accent-content-primary));
 
             &:hover {
-                background-color: var(--color-blue-60);
+                background-color: var(--ds-color-theme-accent-secondary, var(--ds-color-theme-default-light-accent-secondary));
             }
 
             &:active {
-                background-color: var(--color-blue-70);
+                background-color: var(--ds-color-theme-accent-tertiary, var(--ds-color-theme-default-light-accent-tertiary));
+            }
+
+            &:disabled {
+                opacity: 0.4;
+            }
+
+            &:disabled:hover {
+                cursor: not-allowed;
+                background-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-light-accent-primary));
             }
         }
 
         [data-theme=dark] & {
-            --focus-ring: 0px 0px 0px 1px var(--color-black), 0px 0px 0px 3px var(--color-white);
+            --focus-ring-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-dark-accent-primary));
 
             &.standard {
-                color: var(--color-white-at-84);
-                background-color: var(--color-white-at-12);
+                color: var(--ds-color-theme-text-primary, var(--ds-color-theme-default-dark-text-primary));
+                background-color: var(--ds-color-theme-control-fill-primary, var(--ds-color-theme-default-dark-control-fill-primary));
 
                 &:hover {
-                    background-color: var(--color-white-at-18);
+                    background-color: var(--ds-color-theme-control-fill-secondary, var(--ds-color-theme-default-dark-control-fill-secondary));
                 }
 
                 &:active {
-                    background-color: var(--color-white-at-24);
+                    background-color: var(--ds-color-theme-control-fill-tertiary, var(--ds-color-theme-default-dark-control-fill-tertiary));
                 }
 
                 &:disabled {
-                    color: var(--color-white-at-12);
-                    opacity: 0.8;
+                    color: var(--ds-color-theme-text-primary, var(--ds-color-theme-default-dark-text-primary));
+                    opacity: 0.4;
                 }
 
                 &:disabled:hover {
-                    background-color: var(--color-white-at-12);
+                    background-color: var(--ds-color-theme-control-fill-primary, var(--ds-color-theme-default-dark-control-fill-primary));
                 }
             }
 
             &.accent,
             &.accentBrand {
-                color: var(--color-black-at-84);
-                background-color: var(--color-blue-20);
+                color: var(--ds-color-theme-accent-content-primary, var(--ds-color-theme-default-dark-accent-content-primary));
+                background-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-dark-accent-primary));
 
                 &:hover {
-                    background-color: var(--color-blue-30);
+                    background-color: var(--ds-color-theme-accent-secondary, var(--ds-color-theme-default-dark-accent-secondary));
                 }
 
                 &:active {
-                    background-color: var(--color-blue-40);
+                    background-color: var(--ds-color-theme-accent-tertiary, var(--ds-color-theme-default-dark-accent-tertiary));
                 }
 
                 &:disabled {
-                    background-color: var(--color-white-at-36);
-                    color: var(--color-black-at-84);
+                    opacity: 0.4;
+                }
+
+                &:disabled:hover {
+                    background-color: var(--ds-color-theme-accent-primary, var(--ds-color-theme-default-dark-accent-primary));
                 }
             }
         }
