Use --ds variables for Text component

--- a/special-pages/shared/components/Text/Text.module.css
+++ b/special-pages/shared/components/Text/Text.module.css
@@ -1,5 +1,9 @@
 a {
-    color: var(--ddg-color-primary)
+    color: var(--ds-color-theme-accent-text-primary, var(--ds-color-theme-default-light-accent-text-primary));
+
+    [data-theme="dark"] & {
+        color: var(--ds-color-theme-accent-text-primary, var(--ds-color-theme-default-dark-accent-text-primary));
+    }
 }
 
 .title-1 {
@@ -131,7 +135,7 @@ a {
 [data-platform-name="windows"] {
     /* This is a custom style that does not exist in the Design System
        It's used by the Special Error page on Windows */
-    & .custom-title-1 { 
+    & .custom-title-1 {
         font-size: calc(18 * var(--px-in-rem));
         font-weight: 600;
         line-height: calc(22 * var(--px-in-rem));
