Fix focus ring and restore it to black/white

--- a/special-pages/pages/new-tab/app/components/Popover.module.css
+++ b/special-pages/pages/new-tab/app/components/Popover.module.css
@@ -68,6 +68,11 @@
         &:active {
             color: var(--ds-color-theme-accent-tertiary);
         }
+
+        &:focus-visible {
+            box-shadow: var(--focus-ring);
+            outline: none;
+        }
     }
 }
 
