--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -122,10 +122,9 @@
         opacity: 0;
     }
 
-    &:hover {
-        [data-show-hide] {
-            opacity: 1;
-        }
+    &:hover [data-show-hide],
+    [data-show-hide]:focus-within {
+        opacity: 1;
     }
 }
 
