--- a/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/TabSwitcher.module.css
@@ -4,7 +4,6 @@
     display: grid;
     gap: var(--sp-0_5);
     grid-template-columns: repeat(var(--tab-count), 1fr);
-    overflow: hidden;
     padding: var(--sp-0_5);
     position: relative;
 
@@ -16,6 +15,7 @@
 .tab {
     align-items: center;
     background: none;
+    border-radius: 99px;
     border: none;
     color: var(--ds-color-theme-text-primary);
     cursor: pointer;
@@ -27,6 +27,11 @@
     position: relative;
     transform: translateZ(0); /* Force .tab into its own stacking context. Workaround for WebKit mistakenly layering .blob on top of .tab when .App_mainLayout animates. */
     z-index: 1;
+
+    &:focus-visible {
+        box-shadow: var(--focus-ring);
+        outline: none;
+    }
 
     &:hover:not([aria-selected="true"])::before {
         background: var(--ds-color-theme-control-fill-primary);
