--- a/special-pages/pages/new-tab/app/protections/components/Protections.module.css
+++ b/special-pages/pages/new-tab/app/protections/components/Protections.module.css
@@ -62,6 +62,11 @@
     color: var(--ds-color-theme-text-primary);
     border-radius: 5px;
     background: transparent;
+
+    &:focus-visible {
+        box-shadow: var(--focus-ring);
+        outline: none;
+    }
 }
 
 [data-platform-name="windows"] {
@@ -99,13 +104,16 @@
         background: transparent;
         border: 0.5px solid transparent;
         height: 22px;
+
     }
     .active {
         border: 0.5px solid rgba(0, 0, 0, 0.10);
         background: #FFF;
 
-        /* Mac/Control/Standard */
-        box-shadow: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.20) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.05) inset, 0px 0px 0px 0.5px rgba(0, 0, 0, 0.10), 0px 0px 1px 0px rgba(0, 0, 0, 0.05), 0px 1px 1px 0px rgba(0, 0, 0, 0.20);
+        &:not(:focus-visible) {
+            /* Mac/Control/Standard */
+            box-shadow: 0px 0.5px 0px 0px rgba(255, 255, 255, 0.20) inset, 0px 1px 0px 0px rgba(255, 255, 255, 0.05) inset, 0px 0px 0px 0.5px rgba(0, 0, 0, 0.10), 0px 0px 1px 0px rgba(0, 0, 0, 0.05), 0px 1px 1px 0px rgba(0, 0, 0, 0.20);
+        }
 
         [data-theme="dark"] & {
             background: rgba(255, 255, 255, 0.25);
